# slopcoder

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Makefile  README.md  environments.yaml
.github/workflows/: ci.yml
appimage/: .gitignore  AppRun  Slopcoder.desktop  build.sh
crates/slopagent/: Cargo.toml
crates/slopagent/src/: main.rs  state.rs
crates/slopcoder-core/: Cargo.toml
crates/slopcoder-core/src/: agent.rs  agent_rpc.rs  anyagent.rs  branch_picker.rs  claude_agent.rs  codex_agent.rs  cursor_agent.rs  environment.rs  events.rs  gemini_agent.rs  lib.rs  opencode_agent.rs  persistence.rs  task.rs
crates/slopcoder-core/tests/: integration.rs
crates/slopcoder-server/: Cargo.toml
crates/slopcoder-server/src/: main.rs  routes.rs  state.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: DiffViewer.tsx  NewTaskForm.tsx  TaskDetail.tsx  TaskList.tsx  TerminalPane.tsx  Workspace.tsx
frontend/src/utils/: messageFormatting.test.ts  messageFormatting.ts  taskMessageDraftCache.test.ts  taskMessageDraftCache.ts  taskTranscriptScroll.test.ts  taskTranscriptScroll.ts
