[package]
name = "slopagent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote slopagent worker that connects to slopcoder-server"

[dependencies]
slopcoder-core = { path = "../slopcoder-core" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = "0.24"
http = "1"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
