[package]
name = "slopcoder-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for managing LLM agents on Git worktrees"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
dspy-rs = "0.7.3"
reqwest = { version = "0.12.28", features = ["native-tls-vendored"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
